    Allow setting admin password on first run (#299)

Fixed
    Switching projects in snap broken
    An issue with bulk deleting running instances
    Reseting user password by pressing enter leads to undefined behaviour (#282)
    Console session doubling input (#301)
    Remove card-columns from images which prevents a jumpy UI

0.10.2 - 30/10/2020

Fixed
    Cant access instance files (#273)

0.10.1 - 21/10/2020

Fixed
    Fix an issue with node trying to use wrong sql methods (#269)

0.10.0 - 20/10/2020

Added
    Support for setting addtional restriction keys on projects (#229)
    Search for instance by ip address (#233)
    Remove profile from instance (#224)
    Support weekly & monthly backups (#251)
    Networks feature to project creation (#252)
    Support for permanent API keys (#181)
    Some local user analytics (#219)
    Support for "ubuntu daily" & "ubuntu" (ubuntu-release) image remotes

Fixed
    Changing cluster member alias breaks UI (#234) (Slight caveat that the
        node server wont return operations for a cluster member with an alias
        that doesn't match the LXD server_name)
    Dont show deleted backups
    Fix server overview doesnt load properly when system details missing (#262)
    Deleting last project when on project blocks UI (#261)
    used_by on networks now returning null & preventing UI from loading
    Reading files in instances not in the default project

Changed
    Used buttons instead of dropdown to change instance state
    Slight improvement to create container UX
    HostsCollection implmenets JsonSerializable so it can be logged properly
    Use guzzle sink to prevent oom issue using backups in the browser (#242)
    Allow running php script "forever" when importing a backup (#245)
    Only search for image types applicable to instance being created
    Use simplestreams to read images from remote sources
    Improve import images UX
    Improve virtual machine creation UI & UX