@@ -29,6 +29,7 @@ Fixed
     Reseting user password by pressing enter leads to undefined behaviour (#282)
     Console session doubling input (#301)
     Remove card-columns from images which prevents a jumpy UI
+    Attempts to gather offline hosts metrics breaks script 
 
 0.10.2 - 30/10/2020
 
